# ROS_Dem

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: ros_demo.pc
devel/lib/ros_demo/: demo
devel/share/ros_demo/cmake/: ros_demoConfig.cmake
src/demo/: CMakeLists.txt  package.xml
src/demo/src/: demo.cpp
