cmake_minimum_required(VERSION 2.8.3)
project(ros_demo)

## Find catkin and any catkin packages
find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg)

## Declare ROS messages and services
#add_message_files(FILES Num.msg)
#add_service_files(FILES AddTwoInts.srv)

## Generate added messages and services
#generate_messages(DEPENDENCIES std_msgs)

## Declare a catkin package
catkin_package()

include_directories(include ${catkin_INCLUDE_DIRS})

add_executable(demo src/demo.cpp)
target_link_libraries(demo ${catkin_LIBRARIES})
add_dependencies(demo ros_demo_generate_messages_cpp)

rosbuild_add_executable(points_and_lines src/points_and_lines.cpp)

